fix(security): resolve all M1-M5 critical/high/medium security and code review issues
CRITICAL:
- Remove JWT bearer token from process variables (CRIT-01)
- Add tenant isolation + auth to ProcessInstanceController (CRIT-02/03)
- Narrow middleware public route exception to /api/auth/* only (CRIT-05)

HIGH:
- Add resource roles to Spring Security context (HIGH-02)
- Strip security-sensitive vars from process start + variable PUT (HIGH-05)
- Gate actuator/Swagger behind feature flag in admin+ERP (C-2/C-3)
- Add tenant filter to admin/DOA task query bypass (HIGH-03)
- Add issuer validation to admin JwtDecoder (HIGH-01)
- Enforce tenant ownership on analytics endpoint (HIGH-04)
- Restrict connector resolveEndpoint authorization (HIGH-07)
- Remove JWT claim console.log from portal auth (HIGH-08)
- Remove owningDepartment user-supplied fallback (HIGH-09)

MEDIUM:
- Remove default DB passwords from application.yml (MED-01)
- Disable stack trace/message exposure in engine+admin service (MED-02)
- Add tenant ownership check to config vars /map endpoint (MED-05)
- Restrict internal user profile endpoint (MED-06)
- Restrict cache invalidation endpoint (MED-07)
- Handle RefreshAccessTokenError in portal (MED-11)
- Add TTL to route access cache (MED-04)

LOW/CODE QUALITY:
- Fix processDefinitionName cache fallback conflict (L-7)
- Fix null startTime NPE in ProcessMonitoringService (L-2)
- Disable Flowable built-in REST API by default (LOW-06)
- Fix AdminServiceClient cache key for role lists (M-9)
- Use sub instead of preferred_username for task ops (L-4)
- Externalize CORS origins to config (M-8)
- Externalize valid issuers to config (M-2)
- Replace bare RuntimeException with ResponseStatusException in UserService (H-7)
- Add tenant ownership assertion to ConfigurationVariableService.update (MED-05)